fixed nav on mobile

--- a/src/components/About/style.scss
+++ b/src/components/About/style.scss
@@ -9,7 +9,9 @@ li.describe {
 
    h5 {
       font-size: 30px;
-
+      @media only screen and (max-width: 768px) {
+         font-size: 18px;
+         }
       @media only screen and (max-width: 640px) {
          font-size: 20px;
       }
