--- a/src/components/Nav/style.scss
+++ b/src/components/Nav/style.scss
@@ -7,16 +7,23 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     @media only screen and (max-width: 768px) {
+        position: fixed;
+        top: 0;
         width: 100vw;
         height: 100vh;
         flex-direction: column;
+        justify-content: initial;
         background-color: $primary-color;
         margin: 0;
-        padding-bottom: 10%;
+        padding-bottom: 40%;
         li {
         margin: auto;
         padding-bottom: 10%;
         text-align: center;
+        a{
+            font-size: 30px;
+            font-weight: bold;
+        }
     }
        }
 }
